--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==3.1.7
 django-autoslug==1.9.8
 django-cors-headers==3.7.0
 django-countries==7.0
+django-debug-toolbar==3.2.1
 django-filter==2.4.0
 django-grappelli==2.14.3
 django-import-export==2.5.0
@@ -20,6 +21,7 @@ djangorestframework-api-key==2.0.0
 drf-yasg==1.20.0
 et-xmlfile==1.0.1
 generics==3.3.0
+gunicorn==20.1.0
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
@@ -41,7 +43,9 @@ ruamel.yaml==0.16.12
 ruamel.yaml.clib==0.2.2
 sqlparse==0.4.1
 tablib==3.0.0
+typing-extensions==3.10.0.0
 uritemplate==3.0.1
 urllib3==1.26.3
+whitenoise==5.2.0
 xlrd==2.0.1
 xlwt==1.3.0
